--- a/technical-test-renderer/src/main/resources/templates/pages/index.html
+++ b/technical-test-renderer/src/main/resources/templates/pages/index.html
@@ -10,15 +10,16 @@
 </head>
 
 <body class="bg-light">
-<header class="bg-gradient bg-primary text-white py-5 shadow-sm mb-5">
+<header class="bg-gradient bg-primary text-white py-2 shadow-sm mb-5">
     <div class="container text-center">
         <h1 class="fw-bold">Recherche de Vols</h1>
     </div>
 </header>
 <main class="container">
+    <h2 class="mb-3">Bienvenue sur notre site de recherche de vols</h2>
+    <p class="lead text-secondary">Commencez votre aventure en trouvant les meilleurs vols disponibles.</p>
+    <div th:replace="~{fragments/filters::filters}"></div>
     <section class="card shadow-sm p-4 mb-5 bg-white rounded">
-        <h2 class="mb-3">Bienvenue sur notre site de recherche de vols</h2>
-        <p class="lead text-secondary">Commencez votre aventure en trouvant les meilleurs vols disponibles.</p>
         <div class="table-responsive">
             <table class="table table-hover align-middle">
                 <thead class="table-light">
