--- a/technical-test-renderer/src/main/resources/templates/fragments/footer.html
+++ b/technical-test-renderer/src/main/resources/templates/fragments/footer.html
@@ -1,4 +1,4 @@
-<footer class="bg-gradient bg-primary text-white text-center py-3 mt-5">
+<footer class="footer bg-gradient bg-primary text-white text-center py-3 mt-auto">
     <div class="container">
         <p class="mb-0">&copy; 2023 Recherche de Vols. Tous droits réservés.</p>
     </div>
