--- a/technical-test-renderer/src/main/resources/templates/pages/index.html
+++ b/technical-test-renderer/src/main/resources/templates/pages/index.html
@@ -9,45 +9,50 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
-<body class="bg-light">
-<header class="bg-gradient bg-primary text-white py-2 shadow-sm mb-5">
+<body class="bg-light d-flex flex-column min-vh-100">
+<header class="bg-gradient bg-primary text-white py-2 shadow-sm mb-3">
     <div class="container text-center">
         <h1 class="fw-bold">Recherche de Vols</h1>
     </div>
 </header>
-<main class="container">
-    <h2 class="mb-3">Bienvenue sur notre site de recherche de vols</h2>
-    <p class="lead text-secondary">Commencez votre aventure en trouvant les meilleurs vols disponibles.</p>
-    <div th:replace="~{fragments/filters::filters}"></div>
-    <section class="card shadow-sm p-4 mb-5 bg-white rounded">
-        <div class="table-responsive">
-            <table class="table table-hover align-middle">
-                <thead class="table-light">
-                    <tr>
-                        <th scope="col" class="py-3">Départ de</th>
-                        <th scope="col" class="py-3">Arrivée à</th>
-                        <th scope="col" class="py-3">Prix</th>
-                        <th scope="col" class="py-3 text-center">Photo</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr th:each="flight : ${flights}">
-                        <td class="fw-semibold" th:text="|${flight.origin.name} (${flight.origin.iata})|">Départ</td>
-                        <td th:text="|${flight.destination.name} (${flight.destination.iata})|">Arrivée</td>
-                        <td th:text="${#numbers.formatDecimal(flight.price, 1, 2)} + ' €'"></td>
-                        <td class="text-center">
-                            <img th:src="${flight.image}"
-                                 th:alt="|Photo du vol ${flight.id}|"
-                                 class="rounded shadow-sm"
-                                 width="100"
-                                 style="object-fit: cover;"
-                                 loading="lazy"/>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-    </section>
+<main class="d-flex flex-row px-3 mb-3">
+    <div class="p-2">
+        <div th:replace="~{fragments/nav::nav}"></div>
+    </div>
+    <div class="p-2 flex-grow-1">
+        <h2 class="mb-3">Bienvenue sur notre site de recherche de vols</h2>
+        <p class="lead text-secondary">Commencez votre aventure en trouvant les meilleurs vols disponibles.</p>
+        <div th:replace="~{fragments/filters::filters}"></div>
+        <section class="card shadow-sm p-4 mb-5 bg-white rounded">
+            <div class="table-responsive">
+                <table class="table table-hover align-middle">
+                    <thead class="table-light">
+                        <tr>
+                            <th scope="col" class="py-3">Départ de</th>
+                            <th scope="col" class="py-3">Arrivée à</th>
+                            <th scope="col" class="py-3">Prix</th>
+                            <th scope="col" class="py-3 text-center">Photo</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr th:each="flight : ${flights}">
+                            <td class="fw-semibold" th:text="|${flight.origin.name} (${flight.origin.iata})|">Départ</td>
+                            <td th:text="|${flight.destination.name} (${flight.destination.iata})|">Arrivée</td>
+                            <td th:text="${#numbers.formatDecimal(flight.price, 1, 2)} + ' €'"></td>
+                            <td class="text-center">
+                                <img th:src="${flight.image}"
+                                     th:alt="|Photo du vol ${flight.id}|"
+                                     class="rounded shadow-sm"
+                                     width="100"
+                                     style="object-fit: cover;"
+                                     loading="lazy"/>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </section>
+    </div>
 </main>
 <div th:replace="~{fragments/footer::footer}"></div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
