feat(api/front): View flight details
Signed-off-by: antoine-bryer <abryer@nextoo.fr>

--- a/technical-test-renderer/src/main/resources/templates/pages/index.html
+++ b/technical-test-renderer/src/main/resources/templates/pages/index.html
@@ -16,7 +16,7 @@
     </div>
 </header>
 <main class="d-flex flex-row px-3 mb-3">
-    <div class="p-2">
+    <div class="p-2 flex-shrink-0">
         <div th:replace="~{fragments/nav::nav}"></div>
     </div>
     <div class="p-2 flex-grow-1">
@@ -32,6 +32,7 @@
                             <th scope="col" class="py-3">Arrivée à</th>
                             <th scope="col" class="py-3">Prix</th>
                             <th scope="col" class="py-3 text-center">Photo</th>
+                            <th scope="col" class="py-3">Détails</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -47,6 +48,7 @@
                                      style="object-fit: cover;"
                                      loading="lazy"/>
                             </td>
+                            <td><a th:href="|/${flight.id}|">Voir</a></td>
                         </tr>
                     </tbody>
                 </table>
