--- a/technical-test-renderer/src/main/resources/templates/pages/createFlight.html
+++ b/technical-test-renderer/src/main/resources/templates/pages/createFlight.html
@@ -16,7 +16,7 @@
     </div>
 </header>
 <main class="d-flex flex-row px-3 mb-3">
-    <div class="p-2">
+    <div class="p-2 flex-shrink-0">
         <div th:replace="~{fragments/nav::nav}"></div>
     </div>
     <div class="p-2 flex-grow-1">
