--- a/technical-test-renderer/src/main/resources/templates/pages/index.html
+++ b/technical-test-renderer/src/main/resources/templates/pages/index.html
@@ -64,10 +64,12 @@
                     </tbody>
                 </table>
             </div>
+            <div th:replace="~{fragments/pagination::pagination}"></div>
         </section>
     </div>
 </main>
 <div th:replace="~{fragments/footer::footer}"></div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script type="text/javascript" th:src="@{/scripts/pagination.js}" defer></script>
 </body>
 </html>
